<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="#ffffff">

    <TextView
        android:id="@+id/txt_re_security_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_security_guide"
        android:textColor="#000000"/>

<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    	<TextView 
    	    android:layout_width="0dip"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="1"
    	    android:text="@string/txt_security_private"
    	    android:textColor="#000000"
    	    android:orientation="horizontal"
    		android:gravity="center"/>
    	<CheckBox
    	    android:id="@+id/checkbox_re_security01" 
	        android:layout_width="wrap_content"
    		android:layout_height="wrap_content"/>
    	<Button 
    	    android:id="@+id/btn_re_security01" 
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:text="@string/txt_security_detail"/>
</LinearLayout>				

<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    	<TextView 
    	    android:layout_width="0dip"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="1"
    	    android:text="@string/txt_security_location"
    	    android:textColor="#000000"
    	    android:orientation="horizontal"
    		android:gravity="center"/>
    	<CheckBox 
    	    android:id="@+id/checkbox_re_security02"
	        android:layout_width="wrap_content"
    		android:layout_height="wrap_content"/>
    	<Button
    	    android:id="@+id/btn_re_security02" 
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:text="@string/txt_security_detail"/>
</LinearLayout>				

<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    	<TextView 
    	    android:layout_width="0dip"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="1"
    	    android:text="@string/txt_security_all_check"
    	    android:textColor="#000000"
    	    android:orientation="horizontal"
    		android:gravity="center"/>
    	<CheckBox
    	    android:id="@+id/checkbox_re_security03" 
	        android:layout_width="wrap_content"
    		android:layout_height="wrap_content"/>
    	<Button
    	    android:visibility="invisible" 
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:text="@string/txt_security_detail"/>
</LinearLayout>					
</LinearLayout>